# NixCmakeImportStd

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  default.nix  flake.nix  hello_world.cc  main.cc  shell.nix
